<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="#ffffff">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/dialog_user_titulo"
        android:textSize="40dp"
        android:gravity="center"
        android:id="@+id/txtBienvenida"
        android:textColor="#303F9F"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/dialog_user_mensaje"
        android:id="@+id/principal_mensaje" />

    <EditText
        android:layout_marginTop="60dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text=""
        android:hint="@string/dialog_user_nombre"
        android:ems="10"
        android:layout_gravity="center"
        android:id="@+id/principal_nombre"
        android:textColorHint="#FF4081"
        android:gravity="center"
        android:textColor="#303F9F"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text=""
        android:hint="@string/dialog_user_apellidos"
        android:ems="10"
        android:layout_gravity="center"
        android:id="@+id/principal_apellidos"
        android:textColorHint="#FF4081"
        android:gravity="center"
        android:textColor="#303F9F"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_user_bnt_guardar"
        android:id="@+id/principal_btn_guardar"
        android:layout_marginTop="34dp"
        android:layout_gravity="center_horizontal"
        android:background="#303F9F"
        android:textColor="#FFFFFF" />
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_user_btn_cancelar"
        android:id="@+id/principal_btn_cancelar"

        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:background="#FF4081"
        android:textColor="#FFFFFF" />
</LinearLayout>
