<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp">


        <ImageView
            android:layout_width="100dp"
            android:layout_gravity="left"
            android:layout_height="100dp"
            android:id="@+id/dialog_foto"
            android:src="@drawable/museo"/>

        <EditText
            android:gravity="left"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dialog_texto"
            android:hint="@string/dialog_edit"
            android:text=""
            android:textAlignment="center" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dialog_btn_1"
            android:layout_weight="1"
            android:id="@+id/dialog_cancelar"
            android:layout_margin="5dp"
            android:background="#303F9F"
            android:textColor="#ffffff" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dialog_btn_2"
            android:id="@+id/dialog_enviar"
            android:layout_margin="5dp"
            android:background="#303F9F"
            android:textColor="#ffffff" />
    </LinearLayout>
</LinearLayout>